--- a/packages/command-response-types/package.json
+++ b/packages/command-response-types/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "@slapdash/command-response",
+  "name": "@slapdash/command-response-types",
   "version": "0.0.0",
-  "description": "TS types for Command Response",
-  "main": "index.d.ts",
+  "description": "Typescript types for Command Response.",
   "types": "index.d.ts",
   "author": {
     "name": "Slapdash Inc.",
     "email": "hello@slapdash.com",
     "url": "https://slapdash.com/"
   },
-  "license": "UNLICENSED"
+  "license": "MIT"
 }
