--- a/packages/command-toolkit/package.json
+++ b/packages/command-toolkit/package.json
@@ -3,6 +3,15 @@
   "version": "0.0.0",
   "description": "A set of tools to facilitate building a Slapdash Command.",
   "main": "index.js",
+  "homepage": "https://github.com/slapdash/commands/tree/main/packages/command-toolkit",
+  "keywords": [
+    "slapdash"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/slapdash/commands/",
+    "directory": "packages/command-toolkit"
+  },
   "author": {
     "name": "Slapdash Inc.",
     "email": "hello@slapdash.com",
