--- a/commands/search-iconfinder/command.toml
+++ b/commands/search-iconfinder/command.toml
@@ -1,4 +1,4 @@
-name = "Iconfinder"
+name = "Search Iconfinder"
 description = "Search for icons from Iconfinder and copy & paste them directly to other apps."
 endpointURL = "https://www.taraszubyk.com/api/slapdash/iconfinder"
 sourceCodeURL = "https://github.com/zuta/slapdash-commands/blob/master/api/slapdash/iconfinder.ts"
