Add language and categories to commands

--- a/commands/search-iconfinder/command.toml
+++ b/commands/search-iconfinder/command.toml
@@ -2,6 +2,8 @@ name = "Search Iconfinder"
 description = "Search for icons from Iconfinder and copy & paste them directly to other apps."
 endpointURL = "https://www.taraszubyk.com/api/slapdash/iconfinder"
 sourceCodeURL = "https://github.com/zuta/slapdash-commands/blob/master/api/slapdash/iconfinder.ts"
+language = "typescript"
+categories = ["Design"]
 
 author.name = "Taras Zubyk"
 author.profileURL = "https://twitter.com/_zuta_"
