--- a/commands/vercel-projects/command.toml
+++ b/commands/vercel-projects/command.toml
@@ -2,6 +2,8 @@ name = "Vercel Projects"
 description = "Quickly search & jump to a Vercel project."
 endpointURL = "https://www.taraszubyk.com/api/slapdash/vercel-projects"
 sourceCodeURL = "https://github.com/zuta/slapdash-commands/blob/master/api/slapdash/vercel-projects.ts"
+language = "typescript"
+categories = ["Developer Tools"]
 
 author.name = "Taras Zubyk"
 author.profileURL = "https://twitter.com/_zuta_"
