--- a/commands/search-unsplash/command.toml
+++ b/commands/search-unsplash/command.toml
@@ -9,8 +9,8 @@ author.name = "Taras Zubyk"
 author.profileURL = "https://twitter.com/_zuta_"
 
 readme = """
-Use this command to seach free, high-resolution photos from [Unsplash](https://unsplash.com/).
+Use this command to search free, high-resolution photos from [Unsplash](https://unsplash.com/).
 Simply type the keywords and jump to the photo you liked. A very useful tool when preparing a presentation or writing a blog post. 
 
-All photos are displayed in the [Pinterest](https://pinterest.com/)-like layout – Masonry View - which gives you a beatiful preview of each photo.
+All photos are displayed in the [Pinterest](https://pinterest.com/)-like layout – Masonry View - which gives you a beautiful preview of each photo.
 """
