--- a/commands/rss-feed/command.toml
+++ b/commands/rss-feed/command.toml
@@ -15,11 +15,11 @@ The command lets you convert any RSS Feed into a searchable list in the Command 
 The first time you run the command, you'll be asked to provide a URL for the RSS Feed. 
 There are many RSS Feeds available but here are some popular ones that you might want to try:
 
-- [New York Times Home Page](https://rss.nytimes.com/services/xml/rss/nyt/HomePage.xml) – latest news from [The New Your Times](https://www.nytimes.com/) home page.
-- [Reddit Front Page](https://www.reddit.com/.rss) – latest posts from the front page on [Reddit](https://www.reddit.com/). In most cases, you can create an RSS feed by adding ".rss" to the end of an existing Reddit URL, e.g. http://www.reddit.com/r/news/.rss.
-- [Hacker News Front Page](https://hnrss.org/frontpage) – top 30 posts that have appeared on the front page of [Hacker News](https://news.ycombinator.com/).
+- [New York Times Home Page](https://rss.nytimes.com/services/xml/rss/nyt/HomePage.xml) – latest news from The New Your Times home page.
+- [Reddit Front Page](https://www.reddit.com/.rss) – latest posts from the front page on Reddit. In most cases, you can create an RSS feed by adding ".rss" to the end of an existing Reddit URL, e.g. http://www.reddit.com/r/news/.rss.
+- [Hacker News Front Page](https://hnrss.org/frontpage) – top 30 posts that have appeared on the front page of Hacker News.
 - [Hacker News Jobs](https://hnrss.org/jobs) – new job opportunities from YC funded startups.
-- [Product Hunt](https://www.producthunt.com/feed) – latest product launches on [ProductHunt](https://www.producthunt.com/). Pro tip: add a `category` parameter to the Feed URL to access the feed for a specific category. For example, for the Productivity category, you can use https://www.producthunt.com/feed?category=productivity.
+- [Product Hunt](https://www.producthunt.com/feed) – latest product launches on Product Hunt. Pro tip: add a `category` parameter to the Feed URL to access the feed for a specific category. For example, for the Productivity category, you can use https://www.producthunt.com/feed?category=productivity.
 
 Given the nature of this command, you can create multiple Slapdash Commands by using different RSS Feed URLs. Try changing the command's name and icon to give it an even better look.
 """
