--- a/commands/search-npm/command.toml
+++ b/commands/search-npm/command.toml
@@ -1,5 +1,5 @@
 name = "Search NPM"
-description = "Quickly search for node packages on NPM."
+description = "Quickly search node packages on NPM"
 endpointURL = "https://www.taraszubyk.com/api/slapdash/search-npm"
 sourceCodeURL = "https://github.com/zuta/slapdash-commands/blob/master/api/slapdash/search-npm.ts"
 language = "typescript"
@@ -14,5 +14,5 @@ The command lets you search node packages from the [NPM Registry](https://www.np
 It is built on top of the [npms API](https://npms.io/). In addition to Github Stars, each package will have the scores for Popularity, Quality and
 Maintenance. These should help you evaluate the health and freshness of the package. If you're curious how these scores are calculated check out npms [About Page](https://npms.io/about).
 
-Pressing `ENTER` will open a package on NPM, but if you want to jump to the package repository or its home page, press `TAB` and choose the option you want.
+Pressing `ENTER` will open a package on NPM, but if you want to jump to the package repository or its home page, press `TAB` instead and choose the option you want.
 """
