--- a/commands/github-stars/command.toml
+++ b/commands/github-stars/command.toml
@@ -10,7 +10,7 @@ author.name = "Taras Zubyk"
 author.profileURL = "https://twitter.com/_zuta_/"
 
 readme = """
-The command shows the last repositories you have starred on Github and allows you to quickly search across them.
+The command shows the last repositories you have starred on [Github](https://github.com) and allows you to quickly search across them.
 
 To use the command, you'll need to generate a [Github Personal Access Token](https://github.com/settings/tokens/new). When you run the command for the first time it will ask you to provide this access token.
 
