--- a/commands/search-tailwind-css-docs/command.toml
+++ b/commands/search-tailwind-css-docs/command.toml
@@ -9,9 +9,7 @@ author.name = "Anish De"
 author.profileURL = "https://github.com/AnishDe12020"
 
 readme = """
-This command lets you search through the [Tailwind CSS documentation](https://tailwindcss.com/docs/installation) and open it
-up on your browser. You can also copy the URL to the documentation and also
-paste the URL to the documentation to your current application.
+This command lets you search through the [Tailwind CSS documentation](https://tailwindcss.com/docs/installation). You can also copy the URL to the individual pages or paste it to your current application.
 
-It is also available as a local command, details here - https://github.com/AnishDe12020/slapcommands
+The command is also [available](https://github.com/AnishDe12020/slapcommands) as a Local Command.
 """
